--- a/pom.xml
+++ b/pom.xml
@@ -76,19 +76,19 @@
 <!--        </dependency>-->
 
     </dependencies>
-    <repositories>
-        <repository>
-            <id>confluent</id>
-            <url>https://packages.confluent.io/maven/</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>confluent</id>
-            <name>Confluent</name>
-            <url>https://packages.confluent.io/maven/</url>
-        </pluginRepository>
-    </pluginRepositories>
+<!--    <repositories>-->
+<!--        <repository>-->
+<!--            <id>confluent</id>-->
+<!--            <url>https://packages.confluent.io/maven/</url>-->
+<!--        </repository>-->
+<!--    </repositories>-->
+<!--    <pluginRepositories>-->
+<!--        <pluginRepository>-->
+<!--            <id>confluent</id>-->
+<!--            <name>Confluent</name>-->
+<!--            <url>https://packages.confluent.io/maven/</url>-->
+<!--        </pluginRepository>-->
+<!--    </pluginRepositories>-->
     <build>
         <plugins>
 <!--            <plugin>-->
